CHANGELOG
=========

DarkElements version 1.9 - november 2014 
- first stable release

