@@ -3,39 +3,36 @@ Used to style the post and page TinyMCE editor.
 */
 
 @import url(//fonts.googleapis.com/css?family=Open+Sans);
-body {background:#333; font-family: 'Open Sans', sans-serif; font-size:0.9em; color:#ddd; line-height:1.5em;}
+body {background:#333; font-family:'Open Sans', sans-serif; font-size:0.9em; color:#ddd; line-height:1.5em;}
+
 
 /* RESET STYLESHEET */
-
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code, ins, mark,
-em, img, q, small, strong, b, dl, dt, dd, ol, ul, li,
-table, caption, tr, th, td {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, ins, mark, 
+em, img, q, small, strong, sub, sup, b, dl, dt, dd, ol, ul, li, table, caption, tr, th, td {
+	margin:0;
+	padding:0;
+	border:0;
+	font-size:100%;
+	font:inherit;
+	vertical-align:baseline;
 }
 
 blockquote, q {
-	quotes: none;
+	quotes:none;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before, blockquote:after, q:before, q:after {
+	content:'';
+	content:none;
 }
 
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+	border-collapse:collapse;
+	border-spacing:0;
 }
 
-/* GENERAL */
 
+/* HEADINGS */
 h1 {font-size:3.0em; line-height:1.2em;}
 h2 {font-size:2.5em; line-height:1.2em;}
 h3 {font-size:2.0em; line-height:1.5em;}
@@ -43,39 +40,46 @@ h4 {font-size:1.5em; line-height:1.5em;}
 h5 {font-size:1.0em; line-height:2em;}
 h6 {font-size:0.75em; line-height:2em;}
 
+
+/* LINKS AND HTML TAGS */
 a {text-decoration:none; color:#ddd;}
 a:hover {color:#e77776;}
 
-strong, b {font-weight: bold;}
+strong, b {font-weight:bold;}
 small {font-size:0.75em;}
-big {font-size: 1.5em;}
-sub {vertical-align: sub; font-size:0.9em;}
-sup {vertical-align: super; font-size:0.9em;}
+big {font-size:1.5em;}
+sub {vertical-align:sub; font-size:0.9em;}
+sup {vertical-align:super; font-size:0.9em;}
 ins, mark {font-weight:bold; background:none; color:#e77776;}
 cite, em, abbr, acronym {font-style:italic;}
-code, pre {margin:10px 0; padding:5px 10px; display:block; border:1px solid #444; word-wrap:break-word; border-radius:5px;-moz-border-radius:5px;}
+code, pre {margin:10px 0; padding:5px 10px; display:block; border:1px solid #444; word-wrap:break-word; border-radius:5px; -moz-border-radius:5px;}
 blockquote, q {margin:10px 0; padding:0 0 0 10px; display:block; font-size:1.2em; line-height:1.5em; font-style:italic; border-left:1px solid #e77776;}
 address {margin:10px 0; padding:0 0 0 10px; display:block; font-size:1.2em; line-height:1.5em; border-left:1px solid #ddd;}
 p {margin:0 0 10px; text-align:justify;}
 
+
+/* TABLE AND LISTS */
 table {margin:10px 0; border-collapse:collapse;}
 table, th, td {border: 1px solid #444; padding:5px 10px;}
+table th {font-weight:bold;}
 
-ul {list-style: square; margin: 2px 0 2px 15px;}
-li {margin: 0 0 0 10px;}
-ol {list-style: decimal; margin: 2px 0 2px 15px;}
-dl {margin: 10px;}
-dt {margin: 0; font-size:1.25em; font-weight:bold;}
-dd {margin: 0 0 0 10px;}
+ul {list-style:square; margin:2px 0 2px 0;}
+ol {list-style:decimal; margin:2px 0 2px 0;}
+li {margin:0 0 0 20px;}
+dl {margin:10px 0;}
+dt {font-weight:bold;}
+dd {margin:0 0 0 20px;}
 
+
+/* IMAGE AND VIDEO */
 img {max-width:100%; height:auto;}
 
 img.alignright {float:right; margin:0 0 1em 1em;}
 img.alignleft {float:left; margin:0 1em 1em 0;}
-img.aligncenter {display: block; margin-left: auto; margin-right: auto; margin-bottom:1em;}
+img.aligncenter {display:block; margin-left:auto; margin-right:auto; margin-bottom:1em;}
 .alignright {float:right; margin:0 0 1em 1em;}
 .alignleft {float:left; margin:0 1em 1em 0;}
-.aligncenter {display: block; margin-left: auto; margin-right: auto; margin-bottom:1em;}
+.aligncenter {display:block; margin-left:auto; margin-right:auto; margin-bottom:1em;}
 
-.wp-caption {background:none; max-width: 100%;}
-.wp-caption-text {text-align:center; word-wrap: break-word;}
+.wp-caption {background:none; max-width:100%;}
+.wp-caption-text {text-align:center; word-wrap:break-word;}
