@@ -39,5 +39,6 @@
     */
     wp_footer();
 ?>
+
 </body>
 </html>
