@@ -31,6 +31,7 @@
 	} ?>
 
 	<?php the_excerpt(); ?>
+
 	<div class="more">
 		<a class="readmore" href="<?php the_permalink() ?>" rel="bookmark"><?php _e( 'Read More &raquo;', 'darkelements' ); ?></a>
 	</div>
