@@ -8,13 +8,15 @@
 <div id="content">
 
 	<?php while ( have_posts() ) : the_post(); ?>
+
 		<h4 class="page-title"><?php the_title(); ?></h4>
 
 		<?php if ( has_post_thumbnail() ) { 
-				the_post_thumbnail('single', array('class' => 'single-image')); 
+			the_post_thumbnail('single', array('class' => 'single-image')); 
 		} ?>
 
 		<?php the_content(); ?>
+
 		<div class="pagelink"><?php wp_link_pages(); ?></div>
 
 		<?php comments_template(); ?>
